<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.qinzj</groupId>
    <artifactId>dubbo-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
  <artifactId>dubbo-service</artifactId>
  <packaging>war</packaging>
  <dependencies>
  	<dependency>
  		<groupId>com.qinzj</groupId>
  		<artifactId>dubbo-api</artifactId>
  		<version>0.0.1-SNAPSHOT</version>
  	</dependency>
  </dependencies>
  
  <build>
  	<plugins>
  		<plugin>
  			<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<configuration>
					<port>8099</port>
					<path>/</path>
					<argLine>-Xmx1024M -XX:MaxPermSize=1024m</argLine>
					<systemProperties>
						<spring.profiles.active>development</spring.profiles.active>
					</systemProperties>
					<useTestClasspath>true</useTestClasspath>
					<uriEncoding>UTF-8</uriEncoding>
				</configuration>
  		</plugin>
  		
  		<plugin>
              <artifactId>maven-compiler-plugin</artifactId>
              <configuration>
                  <source>1.8</source>
                  <target>1.8</target>
                  <encoding>UTF-8</encoding>
              </configuration>
            </plugin>
  		
  	</plugins>
  </build>
  
</project>